# KademliaTransfer

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  start_node.sh
debug/: send_rpc_find_node.py  send_rpc_ping.py  send_rpc_store.py
doc/: Doxyfile.in
include/: bucket.h  client.h  command.h  http.h  list.h  log.h  magnet.h  network.h  peer.h  rpc.h  schedule.h  shared.h  storage.h  vector.h
src/: bucket.c  client.c  command.c  http.c  list.c  log.c  magnet.c  main.c  network.c  peer.c  rpc.c  shared.c  shared.h  storage.c  vector.c
